[project]
name = "potpie-slack"
version = "0.1.0"
description = "Potpie Slack Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "markdown-to-mrkdwn>=0.1.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "slack-bolt>=1.23.0",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]
